k8s/server-deployment.yaml
# this is a deployment file for the server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: crdt-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crdt-server
  template:
    metadata:
      labels:
        app: crdt-server
    spec:
      imagePullSecrets:
        - name: aws-ecr-secret
      containers:
        - name: crdt-demo-server
          image: 963352896991.dkr.ecr.us-east-1.amazonaws.com/crdtdemo/node:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
# this is a service for the server
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: crdt-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30001
  type: NodePort
