k8s/wpdeployment.yaml
#this is an example deployment file for wordpress
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp-deployment
  labels:
    app: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:php7.2-apache
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
# this is a service for wordpress
apiVersion: v1
kind: Service
metadata:
  name: wp-service
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80 # Internal service port
      targetPort: 80 # Container port (Apache/Nginx)
      nodePort: 30080 # External access port (must be between 30000-32767)
  type: NodePort
